# docker_cpp

./: Dockerfile  build.sh  compose.yml  readme.md  run.sh
src/: CMakeLists.txt  entry.sh  main.cpp
